--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -1,6 +1,6 @@
 {
   "promptDelete": false,
   "foldIndent": false,
-  "showLineNumber": true,
+  "showLineNumber": false,
   "readableLineLength": false
 }
